# snowstorm

./: .env.template  .gitignore  .rustfmt.toml  Cargo.toml  README.md  rustfmt.toml
examples/: basic.rs  dsn.rs  timing.rs
src/: errors.rs  lib.rs  requests.rs  responses.rs  session.rs  utils.rs
src/responses/: data.rs  deserializer.rs  error.rs  mod.rs  query.rs  result.rs  row.rs  serializer.rs  types.rs
src/responses/deserializer/: arrow.rs  binary.rs  boolean.rs  datetime.rs  datetime_utc.rs  decimal.rs  epoch.rs  float.rs  hashmap.rs  integer.rs  mod.rs  naive_date.rs  naive_datetime.rs  naive_time.rs  null.rs  string.rs  variant.rs  vec.rs
src/responses/result/: hashmap.rs  jsonmap.rs  jsonvec.rs  mod.rs  vec.rs
src/responses/types/: chunk.rs  error.rs  internal.rs  login.rs  mod.rs  query.rs  result.rs  row.rs  row_type.rs  value.rs
tests/: auth.rs  execute.rs  execute_async.rs  types.rs
tests/support/: mod.rs
