[package]
name = "snowstorm"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Snowflake Connector"
readme = "README.md"
repository = "https://github.com/luabase/snowstorm"
keywords = ["snowflake", "data-science"]
categories = ["database"]

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.3.15", features = ["futures-io", "gzip"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.25"
hex = "0.4.3"
log = "0.4"
percent-encoding = "2.2"
reqwest = { version = "0.11", features = ["deflate", "gzip", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
rotenv = "0.15"
rotenv_codegen = "0.15"
simple_logger = "4.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"
