[package]
name = "snowstorm"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Snowflake Connector"
readme = "README.md"
repository = "https://github.com/luabase/snowstorm"
keywords = ["snowflake", "data-science"]
categories = ["database"]

[dependencies]
anyhow = "1.0"
arrow2 = { version = "0.15.0", features = ["io_ipc", "io_json"], optional = true }
async-compression = { version = "0.3.15", features = ["futures-io", "gzip"] }
async-trait = "0.1"
backoff = "0.4.0"
base64 = "0.20.0"
chrono = { version = "0.4", features = ["serde"] }
decimal-rs = { version = "0.1.41", features = ["serde"] }
futures = "0.3.25"
hex = "0.4.3"
log = "0.4"
logging_timer = "1.1"
num = "0.4.0"
percent-encoding = "2.2"
reqwest = { version = "0.11", features = ["deflate", "gzip", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
strum_macros = "0.24.3"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = ["full"] }
url-escape = "0.1.1"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
rotenv = "0.15"
rotenv_codegen = "0.15"
simple_logger = "4.0"

[features]
default = ["arrow"]
arrow = ["dep:arrow2"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"

[profile.profile]
inherits = "release"
debug = 1
